--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ConcealMarket - Confidential Prediction Market</title>
     <meta name="description" content="Privacy-preserving prediction markets with Zama FHE technology. Your bets remain encrypted until settlement." />
